Footer align and visual correction

--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -1,5 +1,5 @@
 #nav-footer{
-    background-color: #2e1e19;
+    background-color: black;
     width: 100%;
     box-shadow: 2px 2px 2px #6f6f70a6;
     height: 100%;
@@ -21,7 +21,7 @@
 
 #opcoes-footer{
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     flex-wrap: wrap;
     margin-left: 300px;
 }
@@ -29,12 +29,13 @@
 #onde-estamos-footer{
     color: white;
     list-style-type: none;
-    margin-left: 800px;
+    margin-right: 150px;
 }
 
 #onde-estamos-footer a{
     color: white;
     list-style-type: none;
+    flex-direction: row-reverse;
 }
 
 #direitos{
@@ -49,7 +50,7 @@
 @media (max-width: 420px) {
 
     #nav-footer{
-        background-color: #2e1e19;
+        background-color: black;
         width: 100%;
         box-shadow: 2px 2px 2px #6f6f70a6;
         height: 100%;
@@ -69,7 +70,7 @@
     
     #ptions-footer{
         display: flex;
-        flex-direction: row;
+        flex-direction: row-reverse;
         flex-wrap: wrap;
         margin-left: 1px;
         margin-right: 450px;
@@ -78,6 +79,7 @@
     #onde-estamos-footer{
         color: white;
         list-style-type: none;
+        margin-right: 10px;
     }
     
     #onde-estamos-footer a{
